fix bugs for responsive designt (flex-wrap)

--- a/src/components/HeroesCards.css
+++ b/src/components/HeroesCards.css
@@ -60,11 +60,14 @@ h1, .header {
 }
 .item-image {
     padding: 1px;
+    min-width: 25vw;
+    max-width: 410px;
+    
+    
    
 }
 .image-hero{
-   margin-top: 2vw;
-    width: 50vw;
+    width: 100%;
     border-radius: 10px;
     border: #fff solid 1px;
     background-color: #fff;
@@ -72,8 +75,10 @@ h1, .header {
 .item-properties {
   
     
-    flex: 70%;
+    flex: 1;
     padding: 5px 10px 5px 10px;
+    min-width:50%;
+    margin: 0px 1.5vw;
     
 }
 
@@ -87,7 +92,7 @@ h1, .header {
     
     align-self: center;
     justify-self: center;
-    margin: 20px 0px 10px 0px;
+    margin: 2.5vw 0px 1.5vw 0px;
     text-align: center;
    
 }
